--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="w-full p-4 bg-slate-900">
-            <p class=" text-white/60 text-center text-sm">❤ Developed by <a href="https://twitter.com/Toussaintiradu2" target="_blank">@Toussaintiradu2</a></p>
+            <p class=" text-white/60 text-center text-sm"> Developed by <a href="https://twitter.com/Toussaintiradu2" target="_blank">@Toussaintiradu2</a></p>
         </div>
 </body>
 </html>
