--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </button>
     <div class="w-full flex col-span-2 bg-slate-900 p-5 items-center">
         <div class="w-full text-start">
-            <img src="assets/logo.png" class="w-20 cursor-pointer" id="url" alt="logo_quotes">
+            <img src="logo.png" class="w-20 cursor-pointer" id="url" alt="logo_quotes">
         </div>
         <div class="w-full text-end">
         <a href="https://twitter.com/Toussaintiradu2" target="_blank">
